--- a/src/assets/loader/loader.module.scss
+++ b/src/assets/loader/loader.module.scss
@@ -1,34 +1,51 @@
 
-.loader {
-  display: inline-block;
-  position: fixed;
-  top: 50vh;
-  left: 50vw;
-  width: 80px;
-  height: 80px;
-  z-index: 101;
 
-  img {
-    animation: 1s linear 0s normal none infinite running ring;
-    -webkit-animation: 1s linear 0s normal none infinite running ring;
-    width: 100px;
+.loader_wrapper {
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(54, 54, 54, 0.3);
+  backdrop-filter: blur(5px);
+  z-index: 100;
+
+
+  .loader {
+    display: inline-block;
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    width: 80px;
+    height: 80px;
+    z-index: 101;
+
+    img {
+      animation: 1s linear 0s normal none infinite running ring;
+      -webkit-animation: 1s linear 0s normal none infinite running ring;
+      width: 100px;
+    }
+
+    @keyframes ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+    @-webkit-keyframes ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   }
 
-  @keyframes ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+  @media (max-width: 768px) {
+    left: 45vw;
   }
-  @-webkit-keyframes ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+
 }
 
