--- a/src/common/loader/loader.module.scss
+++ b/src/common/loader/loader.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background-color: rgba(54, 54, 54, 0.3);
   backdrop-filter: blur(5px);
   z-index: 100;
