--- a/src/pages/auth/login/login-form/login-form.module.scss
+++ b/src/pages/auth/login/login-form/login-form.module.scss
@@ -57,6 +57,7 @@
           transform: translateY(-13px);
         }
 
+
         label {
           position: absolute;
           top: 1px;
@@ -66,6 +67,16 @@
           @include text(14px, 18px, 400, rgba(54, 54, 54, 1));
           transition: 0.5s;
           pointer-events: none;
+
+        }
+
+        .loginForm__input_eyeBtn {
+          position: absolute;
+          top: 40%;
+          transform: translateY(-50%);
+          right: 12px;
+          border: none;
+          background-color: transparent;
         }
       }
     }
