--- a/src/pages/auth/registration/step1/registration-step1.module.scss
+++ b/src/pages/auth/registration/step1/registration-step1.module.scss
@@ -79,5 +79,33 @@
       padding-left: 12px;
       @include text(12px, 16px, 500, $unActive-color);
     }
+
+    .input__error {
+      border-bottom: 1px solid #F42C4F;
+    }
+    }
+
+  .registration_submitBTN {
+    width: 100%;
+    padding: 14px 0;
+    text-transform: uppercase;
+    @include text(16px, 24px, 600, #FFFFFF);
+    letter-spacing: 0.2px;
+    background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
+    border-radius: 30px;
+    border: none;
+    &:hover {
+      box-shadow: 0 2px 5px rgba(54, 54, 54, 0.1);
+    }
+
+    &:active {
+      box-shadow: 0 3px 4px rgba(222, 125, 11, 0.2), 0 1px 10px rgba(249, 89, 8, 0.2);
+    }
+
+    &:disabled {
+      background:#EBEBEB;
+      cursor:not-allowed;
+      border:1px solid transparent;
+    }
   }
 }
