--- a/src/pages/auth/registration/step1/registration-step1.module.scss
+++ b/src/pages/auth/registration/step1/registration-step1.module.scss
@@ -14,48 +14,54 @@
     display: flex;
     flex-direction: column;
 
-      .registration__input {
-        position: absolute;
-        width: 100%;
-        height: 56px;
-        border: none;
-        border-bottom: 1px solid #BFC4C9;
-        background-color: #F9F9FA;
-        border-top-right-radius: 4px;
-        border-top-left-radius: 4px;
-        bottom: 20px;
-        padding: 19px 12px;
+    .registration__input {
+      position: absolute;
+      width: 100%;
+      height: 56px;
+      border: none;
+      border-bottom: 1px solid #BFC4C9;
+      background-color: #F9F9FA;
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
+      bottom: 20px;
+      padding: 19px 12px;
 
-        &:focus,
-        &:valid {
-          outline: none !important;
-          padding: 26px 12px 12px;
-        }
+      &:focus,
+      &:valid {
+        outline: none !important;
+        padding: 26px 12px 12px;
       }
+    }
 
-      input:focus-within ~ label ,
-        input:not(:placeholder-shown) ~ label
-      {
-        @include text(12px, 16px, 500, rgba(167, 167, 167, 1));
-        transform: translateY(-13px);
+    .input__error {
+      border-bottom: 1px solid #F42C4F;
+      &:required {
+        border-bottom: 1px solid #F42C4F;
       }
+    }
+
+    input:focus-within ~ label,
+    input:not(:placeholder-shown) ~ label {
+      @include text(12px, 16px, 500, rgba(167, 167, 167, 1));
+      transform: translateY(-13px);
+    }
 
 
-      label {
-        position: absolute;
-        top: 1px;
-        left: 1px;
-        display: inline-block;
-        padding: 19px 12px;
-        @include text(14px, 18px, 400, rgba(54, 54, 54, 1));
-        transition: 0.5s;
-        pointer-events: none;
-      }
+    label {
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      display: inline-block;
+      padding: 19px 12px;
+      @include text(14px, 18px, 400, rgba(54, 54, 54, 1));
+      transition: 0.5s;
+      pointer-events: none;
+    }
 
     .registration_ok_password_icon {
-      position:absolute;
-      top:19px;
-      right:40px;
+      position: absolute;
+      top: 19px;
+      right: 40px;
     }
 
     input:not(:placeholder-shown) ~ .registration__input_eyeBtn {
@@ -80,10 +86,8 @@
       @include text(12px, 16px, 500, $unActive-color);
     }
 
-    .input__error {
-      border-bottom: 1px solid #F42C4F;
-    }
-    }
+
+  }
 
   .registration_submitBTN {
     width: 100%;
@@ -94,6 +98,7 @@
     background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
     border-radius: 30px;
     border: none;
+
     &:hover {
       box-shadow: 0 2px 5px rgba(54, 54, 54, 0.1);
     }
@@ -103,9 +108,9 @@
     }
 
     &:disabled {
-      background:#EBEBEB;
-      cursor:not-allowed;
-      border:1px solid transparent;
+      background: #EBEBEB;
+      cursor: not-allowed;
+      border: 1px solid transparent;
     }
   }
 }
