--- a/src/pages/auth/login/login-form.module.scss
+++ b/src/pages/auth/login/login-form.module.scss
@@ -49,6 +49,13 @@
           }
         }
 
+        .input__error {
+          border-bottom: 1px solid #F42C4F;
+          &:required {
+            border-bottom: 1px solid #F42C4F;
+          }
+        }
+
         input:focus-within ~ label,
         input:not(:placeholder-shown) ~ label {
           @include text(12px, 16px, 500, rgba(167, 167, 167, 1));
@@ -81,6 +88,13 @@
         .loginForm__input_eyeBtn {
           visibility: hidden;
         }
+
+        .login_message {
+          top: 58px;
+          position: absolute;
+          padding-left: 12px;
+          @include text(12px, 16px, 500, $unActive-color);
+        }
       }
     }
 
@@ -105,6 +119,20 @@
       background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
       border-radius: 30px;
       border: none;
+
+      &:hover {
+        box-shadow: 0 2px 5px rgba(54, 54, 54, 0.1);
+      }
+
+      &:active {
+        box-shadow: 0 3px 4px rgba(222, 125, 11, 0.2), 0 1px 10px rgba(249, 89, 8, 0.2);
+      }
+
+      &:disabled {
+        background: #EBEBEB;
+        cursor: not-allowed;
+        border: 1px solid transparent;
+      }
     }
   }
 
