--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -2,127 +2,154 @@
 @import '../../common/styles/variables/variables';
 
 .header {
-    margin-top: 32px;
-    margin-bottom: 15px;
-    display: flex;
-    position: relative;
-    align-items: center;
+  margin-top: 32px;
+  margin-bottom: 15px;
+  display: flex;
+  position: relative;
+  align-items: center;
 
+
+  @media (max-width: 768px) {
+    max-width: 640px;
+    position: center;
+    margin-bottom: 22px;
+    /*margin-bottom: 22px;*/
+  }
+
+  @media(max-width: 320px) {
+    max-width: 288px;
+    position: center;
+    margin: 24px 0;
+  }
+
+  .header__logo {
+    margin: 9px 0;
+
+    img {
+      width: 165px;
+      height: 40px;
+    }
 
     @media (max-width: 768px) {
-        max-width: 640px;
-        position: center;
-        margin-bottom: 22px;
-        /*margin-bottom: 22px;*/
+      display: none;
+    }
+  }
+
+  .header__title {
+    /* position: absolute;*/
+    margin-left: 120px;
+    left: 25.68%;
+    right: 55.41%;
+    top: 15.52%;
+    bottom: 15.52%;
+    @include text(32px, 40px, 600, $main-text-color);
+
+    .header__title_burger {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 24px;
+      margin-left: 0px;
+
+      .header__title_burger {
+        display: inline-flex;
+      }
     }
 
     @media(max-width: 320px) {
-        max-width: 288px;
-        position: center;
-        margin: 24px 0;
+      @include text(18px, 28px, 700, $main-text-color);
     }
 
-    .header__logo {
-        margin: 9px 0;
+  }
 
-        img {
-            width: 165px;
-            height: 40px;
-        }
+  .header__user {
+    display: flex;
+    cursor: pointer;
+    position: sticky;
+    left: 72.97%;
+    min-width: 300px;
+    justify-content: flex-end;
 
-        @media (max-width: 768px) {
-            display: none;
-        }
+    @media (max-width: 768px) {
+      display: none;
     }
 
-    .header__title {
-        /* position: absolute;*/
-        margin-left: 120px;
-        left: 25.68%;
-        right: 55.41%;
-        top: 15.52%;
-        bottom: 15.52%;
-        @include text(32px, 40px, 600, $main-text-color);
-
-        .header__title_burger {
-            display: none;
-        }
-
-        @media (max-width: 768px) {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 24px;
-            margin-left: 0px;
-
-            .header__title_burger {
-                display: inline-flex;
-            }
-        }
-
-        @media(max-width: 320px) {
-            @include text(18px, 28px, 700, $main-text-color);
-        }
-
+    span {
+      @include text(14px, 18px, 700, $main-text-color);
+      align-self: center;
+      padding-right: 16px;
     }
 
-    .header__user {
-        display: flex;
-        /*position: absolute;*/
-        position: sticky;
-        left: 72.97%;
-        min-width: 300px;
-        justify-content: flex-end;
+    img {
+      width: 58px;
+      height: 58px;
+      filter: drop-shadow(0px 2px 4px rgba(191, 196, 201, 0.2)) drop-shadow(0px 3px 4px rgba(191, 196, 201, 0.18)) drop-shadow(0px 1px 5px rgba(191, 196, 201, 0.24));
+      border-radius: 150px;
+    }
+  }
 
-        @media (max-width: 768px) {
-            display: none;
-        }
+  .popUp_wrapper {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 32px;
+    z-index: 2;
+    padding: 32px 24px;
+    width: 270px;
+    background-color: #FFFFFF;
+    box-shadow: 4px 4px 4px rgba(54, 54, 54, 0.05), -4px 4px 4px rgba(54, 54, 54, 0.05);
+    border-radius: 0px 0px 10px 10px;
 
-        span {
-            @include text(14px, 18px, 700, $main-text-color);
-            align-self: center;
-            padding-right: 16px;
-        }
-
-        img {
-            width: 58px;
-            height: 58px;
-            filter: drop-shadow(0px 2px 4px rgba(191, 196, 201, 0.2)) drop-shadow(0px 3px 4px rgba(191, 196, 201, 0.18)) drop-shadow(0px 1px 5px rgba(191, 196, 201, 0.24));
-            border-radius: 150px;
-        }
+    .popUp_button {
+      @include text(18px, 28px, 700, $main-text-color);
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
     }
 
-   /* @media (max-width: 768px) {
-        max-width: 640px;
-        position: center;
-        margin-bottom: 22px;
-
-
-        .header__logo, .header__user {
-            display: none;
-        }
-
-        .header__title {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 24px;
-            margin-left: 0px;
-
-            .header__title_icon {
-                display: inline-flex;
-            }
-        }
-
+    @media (max-width: 768px) {
+      display: none;
     }
+  }
 
-    @media(max-width: 320px) {
-        max-width: 288px;
-        position: center;
-        margin: 24px 0;
+  /* @media (max-width: 768px) {
+       max-width: 640px;
+       position: center;
+       margin-bottom: 22px;
 
-        .header__title {
-            @include text(18px, 28px, 700, $main-text-color);
-        }
-    }*/
+
+       .header__logo, .header__user {
+           display: none;
+       }
+
+       .header__title {
+           display: flex;
+           align-items: center;
+           justify-content: flex-start;
+           gap: 24px;
+           margin-left: 0px;
+
+           .header__title_icon {
+               display: inline-flex;
+           }
+       }
+
+   }
+
+   @media(max-width: 320px) {
+       max-width: 288px;
+       position: center;
+       margin: 24px 0;
+
+       .header__title {
+           @include text(18px, 28px, 700, $main-text-color);
+       }
+   }*/
 }
