--- a/src/common/loader/loader.module.scss
+++ b/src/common/loader/loader.module.scss
@@ -10,6 +10,10 @@
   z-index: 100;
 
 
+  @media (max-width: 768px) {
+    left: 0px;
+  }
+
   .loader {
     display: inline-block;
     position: fixed;
@@ -18,6 +22,13 @@
     width: 80px;
     height: 80px;
     z-index: 101;
+
+    @media (max-width: 768px) {
+      left: 45vw;
+    }
+    @media (max-width: 320px) {
+      left: 40vw;
+    }
 
     img {
       animation: 1s linear 0s normal none infinite running ring;
@@ -43,9 +54,7 @@
     }
   }
 
-  @media (max-width: 768px) {
-    left: 45vw;
-  }
+
 
 }
 
