--- a/src/pages/auth/login/login-form.module.scss
+++ b/src/pages/auth/login/login-form.module.scss
@@ -11,9 +11,16 @@
   align-items: start;
   gap: 32px;
 
+  @media (max-width: 320px) {
+    padding: 24px 16px;
+  }
 
   .loginForm__title {
-    @include text(24px, 30px, 700, $main-text-color)
+    @include text(24px, 30px, 700, $main-text-color);
+
+    @media (max-width: 320px) {
+     width: 256px;
+    }
   }
 
   .loginForm__inputBlock {
@@ -25,10 +32,18 @@
       flex-direction: column;
       gap: 20px;
 
+      @media (max-width: 320px) {
+        gap: 12px;
+      }
+
       .loginForm__input_item {
         width: 416px;
         height: 76px;
         position: relative;
+
+        @media (max-width: 320px) {
+          width: 256px;
+        }
 
         .loginForm__input {
           position: absolute;
@@ -68,7 +83,7 @@
           left: 1px;
           display: inline-block;
           padding: 19px 12px;
-          @include text(14px, 18px, 400, rgba(54, 54, 54, 1));
+          @include text(14px, 18px, 400, $main-text-color);
           transition: 0.5s;
           pointer-events: none;
         }
@@ -92,6 +107,10 @@
           position: absolute;
           padding-left: 12px;
           @include text(12px, 16px, 500, $unActive-color);
+
+          @media (max-width: 320px) {
+            padding-left: 0px;
+          }
         }
       }
     }
@@ -99,6 +118,10 @@
     .loginForm__forgotPassword {
       padding-left: 12px;
       @include text(12, 16px, 500, rgba(167, 167, 167, 1));
+
+      @media (max-width: 320px) {
+        padding-left: 0;
+      }
     }
   }
 
@@ -117,6 +140,11 @@
       background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
       border-radius: 30px;
       border: none;
+
+      @media (max-width: 320px) {
+        padding: 11px 0;
+        @include text(12px, 18px, 600, #FFFFFF);
+      }
 
       &:hover {
         box-shadow: 0 2px 5px rgba(54, 54, 54, 0.1);
@@ -141,13 +169,29 @@
     align-items: center;
     gap: 16px;
 
+    @media (max-width: 320px) {
+      flex-direction: column;
+      gap: 4px;
+      align-items: start;
+      height: 48px;
+    }
+
+
     .loginForm_registrationBlock_message {
       @include text(16px, 24px, 400, rgba(114, 114, 114, 1));
+
+      @media (max-width: 320px) {
+        @include text(15px, 20px, 400, rgba(114, 114, 114, 1));
+      }
     }
 
     .loginForm_registrationBlock_link {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 12px;
       @include text(12px, 18px, 600, rgba(54, 54, 54, 1));
-      padding-top: 2px;
+
     }
   }
 }
