add reset password logic, thunk, errors

--- a/src/pages/auth/forgot-password/forgot-password-form/forgot-password-form.module.scss
+++ b/src/pages/auth/forgot-password/forgot-password-form/forgot-password-form.module.scss
@@ -1,5 +1,5 @@
-@import '../../../common/styles/mixins/mixins';
-@import '../../../common/styles/variables/variables';
+@import '../../../../common/styles/mixins/mixins';
+@import '../../../../common/styles/variables/variables';
 
 .wrapper_forgotPassword {
   display: flex;
