--- a/src/common/error-notification/notification.module.scss
+++ b/src/common/error-notification/notification.module.scss
@@ -1,7 +1,7 @@
 @import '../../common/styles/mixins/mixins';
 @import '../../common/styles/variables/variables';
 
-.wrapper_error {
+.wrapper {
   display: flex;
   width: 100%;
   z-index: 10;
@@ -10,10 +10,9 @@
   padding: 24px 32px;
   gap: 10px;
   position: absolute;
-  background-color: rgba(254, 235, 234, 1);
-
+  //background-color: rgba(254, 235, 234, 1);
   top: 29px;
-  border: 1.5px solid #F42C4F;
+  //border: 1.5px solid #F42C4F;
   border-radius: 5px;
 
   @media (max-width: 768px) {
@@ -33,7 +32,7 @@
     }
   }
 
-  .error_message {
+  .message {
     @include text(16px, 24px, 600, $main-text-color);
     width: 950px;
 
@@ -47,9 +46,9 @@
     }
   }
 
-  .error_button {
+  .button {
     border: none;
-    background-color: rgba(254, 235, 234, 1);
+    // background-color: rgba(254, 235, 234, 1);
     width: 24px;
 
     @media (max-width: 768px) {
@@ -59,5 +58,23 @@
     @media (max-width: 320px) {
       width: 16px;
     }
+  }
+}
+
+.error {
+  background-color: rgba(254, 235, 234, 1);
+  border: 1.5px solid #F42C4F;
+
+  .error_button {
+    background-color: rgba(254, 235, 234, 1);
+  }
+}
+
+.success {
+  border: 1px solid #00CA71;
+  background-color: #EBF9F1;
+
+  success_button {
+    background-color: #EBF9F1;
   }
 }
