--- a/src/common/error-notification/notification.module.scss
+++ b/src/common/error-notification/notification.module.scss
@@ -3,15 +3,15 @@
 
 .wrapper {
   display: flex;
-  width: 100%;
-  z-index: 10;
+  width: 1110px;
+  z-index: 1000;
   justify-content: space-between;
   align-items: center;
   padding: 24px 32px;
   gap: 10px;
   position: absolute;
   //background-color: rgba(254, 235, 234, 1);
-  top: 29px;
+  top: 64px;
   //border: 1.5px solid #F42C4F;
   border-radius: 5px;
 
@@ -74,7 +74,7 @@
   border: 1px solid #00CA71;
   background-color: #EBF9F1;
 
-  success_button {
+  .success_button {
     background-color: #EBF9F1;
   }
 }
