--- a/src/common/error-notification/notification.module.scss
+++ b/src/common/error-notification/notification.module.scss
@@ -1,65 +1,69 @@
 @import '../../common/styles/mixins/mixins';
 @import '../../common/styles/variables/variables';
 
-.wrapper {
-  display: flex;
-  width: 1110px;
-  z-index: 1000;
-  justify-content: space-between;
-  align-items: center;
-  padding: 24px 32px;
-  gap: 10px;
+
+.notification_block {
   position: absolute;
-  //background-color: rgba(254, 235, 234, 1);
+  background-color: #F9D423;
   top: 64px;
-  //border: 1.5px solid #F42C4F;
-  border-radius: 5px;
 
-  @media (max-width: 768px) {
-    padding: 24px 16px;
-  }
-
-  @media (max-width: 320px) {
-    padding: 12px 12px 16px;
-    align-items: start;
-  }
-
-  .error_icon {
-    width: 32px;
+  .wrapper {
+    display: flex;
+    width: 1110px;
+    z-index: 1000;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 32px;
+    gap: 10px;
+    border-radius: 5px;
 
     @media (max-width: 768px) {
+      padding: 24px 16px;
+    }
+
+    @media (max-width: 320px) {
+      padding: 12px 12px 16px;
+      align-items: start;
+    }
+
+    .error_icon {
+      width: 32px;
+
+      @media (max-width: 768px) {
+        width: 24px;
+      }
+    }
+
+    .message {
+      @include text(16px, 24px, 600, $main-text-color);
+      width: 950px;
+
+      @media (max-width: 768px) {
+        width: 546px;
+        @include text(14px, 18px, 600, $main-text-color);
+      }
+
+      @media (max-width: 320px) {
+        width: 186px;
+      }
+    }
+
+    .button {
+      border: none;
+      // background-color: rgba(254, 235, 234, 1);
       width: 24px;
-    }
-  }
 
-  .message {
-    @include text(16px, 24px, 600, $main-text-color);
-    width: 950px;
+      @media (max-width: 768px) {
+        width: 16px;
+      }
 
-    @media (max-width: 768px) {
-      width: 546px;
-      @include text(14px, 18px, 600, $main-text-color);
-    }
-
-    @media (max-width: 320px) {
-      width: 186px;
-    }
-  }
-
-  .button {
-    border: none;
-    // background-color: rgba(254, 235, 234, 1);
-    width: 24px;
-
-    @media (max-width: 768px) {
-      width: 16px;
-    }
-
-    @media (max-width: 320px) {
-      width: 16px;
+      @media (max-width: 320px) {
+        width: 16px;
+      }
     }
   }
 }
+
 
 .error {
   background-color: rgba(254, 235, 234, 1);
