--- a/src/common/modals/button-for-modal/button-for-modal.module.scss
+++ b/src/common/modals/button-for-modal/button-for-modal.module.scss
@@ -12,4 +12,9 @@
   border-radius: 30px;
   border: none;
   padding: 14px 0;
+
+  &:disabled {
+    background: #EBEBEB;
+    cursor: none;
+  }
 }
