--- a/src/features/button/button.module.scss
+++ b/src/features/button/button.module.scss
@@ -1,8 +1,7 @@
 @import "src/common/styles/mixins/mixins";
 @import "src/common/styles/variables/variables";
 
-
-.button_reserved {
+.button_reserved_by_user {
     width: 100%;
     height: 100%;
     text-transform: uppercase;
@@ -12,6 +11,18 @@
     border: 1px solid #BFC4C9;
     border-radius: 20px;
     background-color: #FFFFFF;
+}
+
+.button_reserved {
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+    @include text(12px, 18px, 600, $unActive-color);
+    letter-spacing: 0.2px;
+    box-sizing: border-box;
+    border: 1px solid #BFC4C9;
+    border-radius: 20px;
+    background-color: #F9F9FA;
 }
 
 .button_unactive {
