add wrappers for profile, refactoring tile item, fix user avatar in profile and header

--- a/src/features/button/button.module.scss
+++ b/src/features/button/button.module.scss
@@ -48,3 +48,8 @@
     border-radius: 20px;
     border: none;
 }
+
+.deliveryInfo {
+    text-transform: uppercase;
+    @include text(24px, 30px, 700, #FF5253);
+}
