--- a/src/pages/profile/user-data-block/user-data-block.module.scss
+++ b/src/pages/profile/user-data-block/user-data-block.module.scss
@@ -1,4 +1,3 @@
-
 @import 'src/common/styles/mixins/mixins';
 @import 'src/common/styles/variables/variables';
 
@@ -9,7 +8,109 @@
 
 
   .profile__data {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
 
+    .profile__data_column {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      .registration__input_item_wrapper {
+        width: 416px;
+        height: 76px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+
+        @media (max-width: 320px) {
+          width: 256px;
+        }
+
+        .registration__input {
+          position: absolute;
+          width: 100%;
+          height: 56px;
+          border: none;
+          border-bottom: 1px solid #BFC4C9;
+          background-color: #F9F9FA;
+          border-top-right-radius: 4px;
+          border-top-left-radius: 4px;
+          bottom: 20px;
+          padding: 19px 12px;
+
+          &:disabled {
+            padding-top: 33px;
+            transition: .4s, ease-in-out, all;
+            border-bottom: none;
+          }
+
+          &:focus,
+          &:valid {
+            outline: none !important;
+            padding: 26px 12px 12px;
+          }
+        }
+
+        .input__error {
+          border-bottom: 1px solid #F42C4F;
+
+          &:required {
+            border-bottom: 1px solid #F42C4F;
+          }
+        }
+
+        input:focus-within ~ label,
+        input:not(:placeholder-shown) ~ label {
+          @include text(12px, 16px, 500, rgba(167, 167, 167, 1));
+          transform: translateY(-13px);
+        }
+
+
+        label {
+          position: absolute;
+          top: 1px;
+          left: 1px;
+          display: inline-block;
+          padding: 19px 12px;
+          @include text(14px, 18px, 400, rgba(54, 54, 54, 1));
+          transition: 0.5s;
+          pointer-events: none;
+        }
+
+        .registration_ok_password_icon {
+          position: absolute;
+          top: 19px;
+          right: 40px;
+        }
+
+        input:not(:placeholder-shown) ~ .registration__input_eyeBtn {
+          visibility: visible;
+          position: absolute;
+          top: 40%;
+          transform: translateY(-50%);
+          right: 12px;
+          border: none;
+          background-color: transparent;
+        }
+
+        .registration__input_eyeBtn {
+          visibility: hidden;
+        }
+
+        .registration_message {
+          top: 58px;
+          position: absolute;
+          padding-left: 12px;
+          @include text(12px, 16px, 500, $unActive-color);
+
+          @media (max-width: 320px) {
+            padding-left: 0px;
+          }
+        }
+      }
+    }
   }
 
   .profile__data_buttons {
