--- a/src/common/loader/loader.module.scss
+++ b/src/common/loader/loader.module.scss
@@ -17,8 +17,8 @@
   .loader {
     display: inline-block;
     position: fixed;
-    top: 50vh;
-    left: 50vw;
+    top: 45%;
+    left:48%;
     width: 80px;
     height: 80px;
     z-index: 101;
