--- a/src/pages/main/main-page.module.scss
+++ b/src/pages/main/main-page.module.scss
@@ -7,8 +7,8 @@
 
 
     .content__block {
-
-        min-height: calc(100vh - 105px - 92px) ;
+        flex: 1 1 auto;
+        min-height: calc(100vh - 105px - 90px) ;
         margin-bottom: 42px;
 
         @media (max-width:768px) {
@@ -21,7 +21,8 @@
     }
 
     .footer__block {
-        flex-shrink: 0;
+        //flex-shrink: 0;
+        flex: 0 0 auto;
     }
 
     @media (max-width:768px) {
