--- a/src/pages/books-list/main-contant.module.scss
+++ b/src/pages/books-list/main-contant.module.scss
@@ -55,6 +55,12 @@
                     }
                 }
             }
+
+            .filterBar__rating_reverse {
+                img {
+                    transform: scale(1, -1);
+                }
+            }
         }
 
         .filterBar_right {
