add highlight for search

--- a/src/pages/books-list/list/list-item/list-item.module.scss
+++ b/src/pages/books-list/list/list-item/list-item.module.scss
@@ -2,6 +2,9 @@
 @import "src/common/styles/mixins/mixins";
 @import "src/common/styles/variables/variables";
 
+.highlight {
+  color: #FF5253;
+}
 
 .bookList__item {
   display: flex;
