--- a/src/common/modals/create-comment-modal/create-comment-modal.module.scss
+++ b/src/common/modals/create-comment-modal/create-comment-modal.module.scss
@@ -48,14 +48,17 @@
       letter-spacing: 0.1px;
 
       &::placeholder{
+        padding-top: 3px;
         @include text(14px, 18px,400, $unActive-color);
         letter-spacing: 0.1px;
 
       }
 
       &:focus {
-        outline: none !important;;
+        outline: none !important;
       }
     }
+
+    textarea:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.3s ease;}
   }
 }
