--- a/src/pages/auth/forgot-password/forgot-password-form/forgot-password-form.module.scss
+++ b/src/pages/auth/forgot-password/forgot-password-form/forgot-password-form.module.scss
@@ -36,6 +36,11 @@
     align-items: start;
     gap: 32px;
 
+    @media (max-width: 320px) {
+      gap: 20px;
+      padding: 0px 16px 48px 16px;
+    }
+
     .forgotPassword__title {
       @include text(24px, 30px, 700, $main-text-color);
 
@@ -51,6 +56,7 @@
 
       @media (max-width: 320px) {
         width: 256px;
+        margin-bottom: 20px;
       }
 
       .forgotPassword__input {
@@ -69,6 +75,10 @@
         &:valid {
           outline: none !important;
           padding: 26px 12px 12px;
+        }
+
+        @media (max-width: 320px) {
+          width: 256px;
         }
       }
 
@@ -127,6 +137,10 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
+
+      @media (max-width: 320px) {
+        gap: 20px;
+    }
 
       .forgotPassword_submitBTN {
         width: 100%;
