--- a/src/common/modals/create-comment-modal/create-comment-modal.module.scss
+++ b/src/common/modals/create-comment-modal/create-comment-modal.module.scss
@@ -7,10 +7,19 @@
   align-items: center;
   gap: 32px;
 
+  @media (max-width: 320px) {
+    gap: 24px;
+    margin: 26px 0 16px 0;
+  }
+
   .modal_title {
     @include text(24px, 30px, 700, $main-text-color);
     letter-spacing: 0.1px;
     text-align: center;
+
+    @media (max-width: 320px) {
+      @include text(18px, 28px, 700, $main-text-color);
+    }
   }
 
   .modal_stars_block {
@@ -46,6 +55,11 @@
       padding: 19px 12px;
       @include text(16px, 24px,400, $main-text-color);
       letter-spacing: 0.1px;
+
+      @media (max-width: 320px) {
+        padding: 10px 12px;
+        @include text(14px, 18px,400, $main-text-color);
+      }
 
       &::placeholder{
         padding-top: 3px;
