--- a/src/common/notification/notification.module.scss
+++ b/src/common/notification/notification.module.scss
@@ -10,6 +10,16 @@
   width: 1110px;
   left: 205px;
 
+  @media (max-width: 768px) {
+    left: 8%;
+    width: 640px;
+  }
+
+  @media (max-width: 320px) {
+    left: 6%;
+    width: 280px;
+  }
+
   .wrapper {
     display: flex;
     width: 1110px;
@@ -21,12 +31,15 @@
     border-radius: 5px;
 
     @media (max-width: 768px) {
+      width: 640px;
       padding: 24px 16px;
+
     }
 
     @media (max-width: 320px) {
       padding: 12px 12px 16px;
       align-items: start;
+      width: 280px;
     }
 
     .error_icon {
@@ -53,7 +66,6 @@
 
     .button {
       border: none;
-      // background-color: rgba(254, 235, 234, 1);
       width: 24px;
 
       @media (max-width: 768px) {
@@ -66,7 +78,6 @@
     }
   }
 }
-
 
 .error {
   background-color: rgba(254, 235, 234, 1);
