--- a/src/pages/auth/forgot-password/reset-password-form/reset-password-form.module.scss
+++ b/src/pages/auth/forgot-password/reset-password-form/reset-password-form.module.scss
@@ -12,6 +12,7 @@
   gap: 32px;
 
   @media (max-width: 320px) {
+    width: 288px;
     padding: 24px 16px;
   }
 
@@ -23,6 +24,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @media (max-width: 320px) {
+      gap: 25px;
+    }
 
     .resetPassword__input_item_wrapper {
       width: 416px;
@@ -117,6 +122,10 @@
     flex-direction: column;
     gap: 16px;
 
+    @media (max-width: 320px) {
+      width: 255px;
+    }
+
     .resetPassword_submitBTN {
       width: 100%;
       padding: 14px 0;
@@ -128,6 +137,7 @@
       border: none;
 
       @media (max-width: 320px) {
+        width: 255px;
       padding: 11px 0;
       @include text(12px, 18px, 600, #FFFFFF);
     }
@@ -150,6 +160,12 @@
     .resetPassword_registrationBlock_message {
       width: 357px;
       @include text(16px, 24px, 400, #A7A7A7);
+
+      @media (max-width: 320px) {
+        @include text(15px, 20px, 400, #A7A7A7);
+        width: 255px;
+
+      }
     }
   }
 }
