--- a/src/pages/profile/avatar-block/avatar-block.module.scss
+++ b/src/pages/profile/avatar-block/avatar-block.module.scss
@@ -7,6 +7,10 @@
   gap: 30px;
   align-items: center;
 
+  @media (max-width: 320px) {
+    flex-direction: column;
+    gap: 24px;
+  }
 
   .profile__avatar_img {
     width: 160px;
@@ -17,6 +21,11 @@
     align-items: center;
     justify-content: center;
     border-radius: 150px;
+
+    @media (max-width: 320px) {
+      width: 150px;
+      height: 150px;
+    }
 
     img {
       border-radius: 150px;
@@ -34,7 +43,6 @@
       height: 100%;
       z-index: 1;
       cursor: pointer;
-
     }
 
     .profile__avatar_button {
@@ -59,7 +67,12 @@
     display: flex;
     flex-direction: column;
     padding: 16px 0;
-    @include text(52px, 64px, 500, $main-text-color)
+    @include text(52px, 64px, 500, $main-text-color);
+
+    @media (max-width: 320px) {
+      padding: 0;
+      @include text(26px, 36px, 600, $main-text-color);
+    }
   }
 
 }
