--- a/src/pages/profile/block-wrapper/block-wrapper.module.scss
+++ b/src/pages/profile/block-wrapper/block-wrapper.module.scss
@@ -6,17 +6,29 @@
   flex-direction: column;
   gap: 32px;
 
+  @media (max-width: 320px) {
+    gap: 12px;
+  }
+
   .profile__block_wrapper_title {
     display: flex;
     flex-direction: column;
     gap: 8px;
 
     h3 {
-      @include text(24px, 30px, 700, $main-text-color)
+      @include text(24px, 30px, 700, $main-text-color);
+
+      @media (max-width: 320px) {
+        @include text(18px, 28px, 700, $main-text-color);
+      }
     }
 
     span {
-      @include text(16px, 24px, 400, $unActive-color)
+      @include text(16px, 24px, 400, $unActive-color);
+
+      @media (max-width: 320px) {
+        @include text(14px, 18px, 400, $unActive-color);
+      }
     }
   }
 
