--- a/src/pages/profile/profile-page.module.scss
+++ b/src/pages/profile/profile-page.module.scss
@@ -5,10 +5,16 @@
   display: flex;
   flex-direction: column;
   gap: 92px;
+  
+  @media (max-width: 768px) {
+    gap: 64px;
+  }
+  @media (max-width: 320px) {
+    gap: 42px;
+  }
 
   .book__block__wrapper {
     position: relative;
     width: 100%;
   }
-
 }
