--- a/src/pages/books-list/main-contant.module.scss
+++ b/src/pages/books-list/main-contant.module.scss
@@ -100,6 +100,7 @@
 
                 &:hover,
                 &:focus,
+                &:active,
                 {
                     background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
 
