fix order button and days for selection

--- a/src/common/modals/order-modal/order-modal.module.scss
+++ b/src/common/modals/order-modal/order-modal.module.scss
@@ -23,4 +23,11 @@
     }
   }
 
+  .modal_buttons_block {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+  }
+
 }
