--- a/src/common/modals/button-for-modal/button-for-modal.module.scss
+++ b/src/common/modals/button-for-modal/button-for-modal.module.scss
@@ -6,21 +6,37 @@
   width: 100%;
   height: 100%;
   text-transform: uppercase;
-  @include text(16px, 24px, 600, #FFFFFF);
   letter-spacing: 0.2px;
-  background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
   border-radius: 30px;
-  border: none;
   padding: 14px 0;
 
   @media (max-width: 320px) {
     width: 256px;
     height: 40px;
+  }
+
+}
+
+.button_active {
+  @include text(16px, 24px, 600, #FFFFFF);
+  background: linear-gradient(231.58deg, #F83600 -53.35%, #F9D423 297.76%);
+  border: none;
+
+  @media (max-width: 320px) {
     @include text(12px, 18px, 600, #FFFFFF);
   }
 
   &:disabled {
     background: #EBEBEB;
     cursor: none;
+  }
+}
+
+.button_cancel {
+  border: 1px solid #BFC4C9;
+  @include text(16px, 24px, 600, $main-text-color);
+
+  @media (max-width: 320px) {
+    @include text(12px, 18px, 600, $main-text-color);
   }
 }
