--- a/src/common/modals/create-comment-modal/create-comment-modal.module.scss
+++ b/src/common/modals/create-comment-modal/create-comment-modal.module.scss
@@ -29,7 +29,7 @@
     align-items: center;
 
     .modal_stars_title {
-      @include text(16px, 24px,600, $main-text-color);
+      @include text(16px, 24px, 600, $main-text-color);
       letter-spacing: 0.1px;
       text-align: center;
       margin: 0 auto;
@@ -53,19 +53,18 @@
       background: #F9F9FA;
       border-radius: 4px;
       padding: 19px 12px;
-      @include text(16px, 24px,400, $main-text-color);
+      @include text(16px, 24px, 400, $main-text-color);
       letter-spacing: 0.1px;
 
       @media (max-width: 320px) {
         padding: 10px 12px;
-        @include text(14px, 18px,400, $main-text-color);
+        @include text(14px, 18px, 400, $main-text-color);
       }
 
-      &::placeholder{
+      &::placeholder {
         padding-top: 3px;
-        @include text(14px, 18px,400, $unActive-color);
+        @include text(14px, 18px, 400, $unActive-color);
         letter-spacing: 0.1px;
-
       }
 
       &:focus {
@@ -73,6 +72,9 @@
       }
     }
 
-    textarea:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.3s ease;}
+    textarea:focus::-webkit-input-placeholder {
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
   }
 }
