--- a/src/pages/auth/auth-layout.module.scss
+++ b/src/pages/auth/auth-layout.module.scss
@@ -14,9 +14,50 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap:59px;
+  gap:30px;
 
   .wrapper__login_header {
     @include text(32px, 40px, 700, rgba(255, 255, 255, 1))
+  }
+
+  .wrapper__login_test {
+    border: 1px solid #ffbc8b;
+    box-shadow: 0px 2px 4px rgba(191, 196, 201, 0.2), 0px 3px 4px rgba(191, 196, 201, 0.18), 0px 1px 5px rgba(191, 196, 201, 0.24);
+    border-radius: 10px;
+    padding: 5px;
+    background-color: #f8f8f8;
+    width: 288px;
+
+    .wrapper__login_test_title {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    .wrapper__login_test_block {
+      padding: 5px;
+      display: flex;
+      flex-direction: row;
+
+      .wrapper__login_test_block_title {
+        //@include text(16px, 20px, 400, $main-text-color);
+        width: 78px;
+      }
+
+      .wrapper__login_test_block_descr {
+        //@include text(16px, 20px 300, $main-text-color);
+        width: 120px;
+      }
+
+      .wrapper__login_test_block_button {
+        //@include text(12px, 16px, 400, $main-text-color);
+        @include text(14px, 16px, 500, #ffffff);
+        border: 1px solid #ED5C1D;
+        border-radius: 5px;
+        // width: 50px;
+        background-color: #ffbc8b;
+        padding: 0px 10px;
+
+      }
+    }
   }
 }
