fix booking, refactoring list, add covers for some books

--- a/src/features/rating/rating.module.scss
+++ b/src/features/rating/rating.module.scss
@@ -11,7 +11,9 @@
     .rating__stars {
         display: flex;
         flex-direction: row;
-        gap: 12px;
+        align-self: center;
+
+        gap: 17px;
 
         @media (max-width: 320px) {
             gap: 8px;
