--- a/src/pages/auth/login/login-form.module.scss
+++ b/src/pages/auth/login/login-form.module.scss
@@ -116,13 +116,31 @@
     }
 
     .loginForm__forgotPassword {
-      padding-left: 12px;
-      @include text(12, 16px, 500, rgba(167, 167, 167, 1));
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 5px;
+      @include text(16px, 24px, 400, rgba(54, 54, 54, 1));
+
+      &:hover {
+        cursor: pointer;
+      }
 
       @media (max-width: 320px) {
         padding-left: 0;
+        @include text(15px, 20px, 400, rgba(54, 54, 54, 1))
       }
     }
+  }
+
+  .wrapper__login_test_block_button {
+    //@include text(12px, 16px, 400, $main-text-color);
+    @include text(14px, 16px, 500, #ffffff);
+    border: 1px solid #ED5C1D;
+    border-radius: 5px;
+
+    background-color: #ffbc8b;
+    padding: 0px 10px;
   }
 
   .loginForm_buttonBlock {
