--- a/src/pages/auth/login/login-form.module.scss
+++ b/src/pages/auth/login/login-form.module.scss
@@ -102,6 +102,11 @@
           visibility: hidden;
         }
 
+        input[type="password"]::-ms-reveal,
+        input[type="password"]::-ms-clear {
+          display: none;
+        }
+
         .login_message {
           top: 58px;
           position: absolute;
